# inclavare-containers

./: .clang-format  .gitignore  .gitmodules  0001-enable-shelter-generate-rpm-and-deb-pakcage.patch  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS  MAINTAINERS.md  Makefile  OWNERS  PROJECT  README.md  ROADMAP.md  SECURITY.md  build.rs  code-of-conduct.md  rbi.sh  readme.md  readme_cn.md
attestation-evidence-broker/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
attestation-evidence-broker/docs/design/: design.md
attestation-evidence-broker/hack/: 0001-KVM-X86-Introduce-KVM_HC_VM_HANDLE-hypercall.patch  0003-crypto-ccp-Implement-SEV_GET_REPORT-ioctl-command.patch
attestation-evidence-broker/samples/: .gitignore  Cargo.toml  README.md  build.rs
attestation-evidence-broker/samples/src/: do_hypercall.c  main.rs
attestation-evidence-broker/samples/src/sev_aeb/: mod.rs  sev_evidence.rs
attestation-evidence-broker/samples/src/ttrpc_client/: rpc_client.rs
attestation-evidence-broker/src/: main.rs
attestation-evidence-broker/src/aeb_modules/: mod.rs
attestation-evidence-broker/src/aeb_modules/sev_aeb/: evidence.rs  get_evidence.rs  mod.rs
attestation-evidence-broker/src/device_type/: device.rs
attestation-evidence-broker/src/protocols/: mod.rs
attestation-evidence-broker/src/protocols/aeb/: mod.rs
attestation-evidence-broker/src/ttrpc_server/: mod.rs  rpc_server.rs
eaa/verdict/: Cargo.toml  build.rs
eaa/verdict/src/: main.rs
eaa/verdictd/: Cargo.toml  README.md  build.rs
eaa/verdictd/src/: main.rs
eaa/verdictd/src/attestation_agent/: enclave_tls.rs  mod.rs  protocol.rs  rats_tls.rs
eaa/verdictd/src/configure_provider/: provider.rs
eaa/verdictd/src/crypto/: mod.rs
eaa/verdictd/src/enclave_tls/: ffi.rs  mod.rs
eaa/verdictd/src/key_manager/: directory_key_manager.rs
eaa/verdictd/src/key_provider/: annotation.rs  key_provider_grpc.rs  messages.rs
enclave-tls/: .gitignore  CMakeLists.txt  Makefile  README.md  common.mk
enclave-tls/cmake/: CMakeUninstall.cmake.in  CompilerOptions.cmake  CustomInstallDirs.cmake  FindEnclaveTls.cmake  FindEnclaveTlsSdk.cmake  FindSGX.cmake  SGXCommon.cmake  wolfSSL.cmake
enclave-tls/docs/: run_enclave_tls_with_occlum.md  run_inclavared_and_shelter_with_enclave_tls.md
enclave-tls/docs/design/: design-zh.md  design.md
enclave-tls/hacks/: README.md  enclave-tls-cert-openssl-sample.pem
enclave-tls/rules/: build_env.mk  build_rules.mk  instance.mk  openssl_env.mk  openssl_rules.mk  sgx_env.mk  sgx_rules.mk  wolfssl_env.mk  wolfssl_rules.mk
enclave-tls/samples/: CMakeLists.txt
enclave-tls/samples/enclave-tls-client/: CMakeLists.txt  Makefile  client.c  echo.go  go.mod  go.sum  main.go  ra-tls-client.c
enclave-tls/samples/enclave-tls-server/: CMakeLists.txt  Makefile  go.mod  main.go  ra-tls-server.c  run.go  server.c
enclave-tls/samples/sgx-stub-enclave/: CMakeLists.txt  Makefile  sgx_stub.edl  sgx_stub_ecall.c  sgx_stub_enclave.lds
enclave-tls/src/: CMakeLists.txt  Makefile
enclave-tls/src/api/: enclave_tls_cleanup.c  enclave_tls_init.c  enclave_tls_negotiate.c  enclave_tls_receive.c  enclave_tls_transmit.c
enclave-tls/src/attesters/: Makefile
enclave-tls/src/core/: etls_common.c  etls_core_generate_certificate.c  main.c
enclave-tls/src/crypto_wrappers/: CMakeLists.txt  Makefile
enclave-tls/src/enclave_quotes/: CMakeLists.txt  Makefile
enclave-tls/src/sgx/: CMakeLists.txt  Makefile  ecalls.c  enclave-tls.edl  enclave_tls.edl  ocalls.c
enclave-tls/src/tls_wrappers/: CMakeLists.txt  Makefile
enclave-tls/src/util/: sgxutils.c
enclave-tls/src/verifiers/: CMakeLists.txt  Makefile
enclaved/app.wolfssl/: .gitignore  Cargo.toml  Makefile  build.rs
enclaved/app.wolfssl/src/: main.rs
eventlog-rs/: Cargo.toml
eventlog-rs/src/: lib.rs
eventlog-rs/src/tdx/: actor.rs  binaryblob.rs  mod.rs  rtmr.rs  tdel.rs  tdeventlog.rs
inclavared/app/: Cargo.toml  build.rs
inclavared/app.wolfssl/: .gitignore  Cargo.toml  Makefile  build.rs  wrapper.h
inclavared/app.wolfssl/src/: main.rs
inclavared/app/src/: enclave-tls.rs  ffi.rs  main.rs
inclavared/stub-enclave/: Cargo.toml
inclavared/stub-enclave.wolfssl/: .gitignore  Cargo.toml  Enclave.edl  Enclave.edl.sh  Makefile  wolfssl.edl
inclavared/stub-enclave.wolfssl/src/: lib.rs
inclavared/stub-enclave/src/: cert.rs  cert.rs.bak  lib.rs  types.rs
rats-tls/: .gitignore  CMakeLists.txt  MAINTAINERS  README.md
rats-tls/cmake/: CMakeUninstall.cmake.in  CompilerOptions.cmake  CustomInstallDirs.cmake  FindRatsTls.cmake  FindSGXSSL.cmake  SGXCommon.cmake  SGXSSL.cmake
rats-tls/docs/: run_inclavared_and_shelter_with_enclave_tls.md  run_rats_tls_with_occlum.md
rats-tls/docs/design/: design-zh.md  design.md
rats-tls/docs/designdocs/: design.md
rats-tls/samples/: CMakeLists.txt
rats-tls/samples/enclave-tls-client/: client.c
rats-tls/samples/enclave-tls-server/: CMakeLists.txt  server.c
rats-tls/samples/rats-tls-client/: CMakeLists.txt  client.c
rats-tls/samples/rats-tls-server/: CMakeLists.txt  server.c
rats-tls/samples/sgx-stub-enclave/: CMakeLists.txt  sgx_stub.edl  sgx_stub_ecall.c  sgx_stub_enclave.xml
rats-tls/src/: CMakeLists.txt
rats-tls/src/api/: rats_tls_callback.c  rats_tls_init.c  rats_tls_negotiate.c  rats_tls_receive.c  rats_tls_transmit.c
rats-tls/src/attesters/: CMakeLists.txt
rats-tls/src/core/: cpu.c  etls_core_generate_certificate.c  main.c  rtls_common.c  rtls_core_generate_certificate.c
rats-tls/src/crypto_wrappers/: CMakeLists.txt
rats-tls/src/tls_wrappers/: CMakeLists.txt
rats-tls/src/utils/: CMakeLists.txt  parse.c  toml.c
rats-tls/src/verifiers/: CMakeLists.txt
src/attesters/sgx-la/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c
src/tls_wrappers/openssl/: CMakeLists.txt  main.c  openssl.h  per_thread.h  receive.c  transmit.c  un_negotiate.c  use_cert.c  x509_openssl10x.c
src/verifiers/tdx-ecdsa/: CMakeLists.txt
verdictd/app/: Cargo.toml  build.rs
verdictd/app/proto/: keyprovider.proto
verdictd/app/src/: main.rs
(+1779 files in other folders)
