[package]
name = "aeb"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"
clap = "2.33.3"
vsock = "0.2.4"
libc = "0.2.79"
bytes = "0.4"
sev = { git = "https://github.com/haosanzi/sev", branch = "main", features = ["openssl"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.5"
codicon = "3.0"
native-tls = "0.2"
url = "2.2"
rand = "0.8.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ttrpc = { version = "0.5.2", features = ["async"] }
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1.0.1", features = ["signal", "time"] }
async-trait = "0.1.42"
raw-cpuid = "10.2.0"
log = "0.4.14"
env_logger = "0.8.3"

[build-dependencies]
ttrpc-codegen = "0.2.0"
