[package]
name = "attester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"
clap = "2.33.3"
ttrpc = { version = "0.5.2", features = ["async"] }
sev = { git = "https://github.com/haosanzi/sev", branch = "main", features = ["openssl"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.107"
anyhow = "1.0"
log = "0.4.14"
env_logger = "0.8.3"

[build-dependencies]
ttrpc-codegen = "0.2.0"
cc = "1.0"
