[package]
name = "verdict"
version = "0.0.1"
authors = ["EmisonLu <luzhenghao.lzh@linux.alibaba.com>"]
edition = "2018"

[[bin]]
name = "verdict"
path = "src/main.rs"

[dependencies]
tonic = "0.5"
clap = "2.33.3"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "*"

[build-dependencies]
tonic-build = "0.5"