[package]
name = "verdictd"
version = "0.0.1"
authors = ["Zhou Liang <liang.a.zhou@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
prost = "0.8"
foreign-types = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.0"
rust-crypto = "^0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
shadow-rs = "0.5.25"
clap = "2.33.3"
num_cpus = "1.0"
base64 = "0.13.0"

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"