[package]
name = "verdictd"
version = "0.0.1"
authors = ["Zhou Liang <liang.a.zhou@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
prost = "0.8"
foreign-types = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.0"
rust-crypto = "^0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
shadow-rs = "0.5.25"
clap = "2.33.3"
base64 = "0.13.0"
log = "0.4.14"
env_logger = "0.8.3"
aes-gcm = "0.9.2"

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"