[package]
name = "enclaved-wolfssl"
version = "0.1.0"
authors = ["stormgbs <stormgbs@gmail.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
bindgen = "0.55.1"

[dependencies]
libc = "0.2"
http = "0.2.1"
base64 = "0.13.0"
httparse = { version = "1.3.2", default-features=false }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../rust-sgx/sgx_types" }
sgx_urts = { path = "../rust-sgx/sgx_urts" }
