[package]
name = "inclavared"
version = "0.1.0"
authors = ["stormgbs <stormgbs@gmail.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
bindgen = "0.55.1"

[dependencies]
libc = "0.2"
http = "0.2.1"
base64 = "0.13.0"
percent-encoding = "2.1.0"
reqwest = { version = "0.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
clap = "2.33.3"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../rust-sgx/sgx_types" }
sgx_urts = { path = "../rust-sgx/sgx_urts" }
