[package]
name = "enclaved"
version = "1.0.0"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../rust-sgx/sgx_types" }
sgx_urts = { path = "../rust-sgx/sgx_urts" }