[package]
name = "stubenclave"
version = "1.0.0"

[lib]
name = "stub"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts    = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand    = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots.git", branch = "mesalock_sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
#num_bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx", version = "0.2" }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]

#[patch.'https://github.com/mesalock-linux/rustls']
#rustls = { path = "../rustls" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../rust-sgx/sgx_alloc" }
sgx_backtrace = { path = "../rust-sgx/sgx_backtrace" }
sgx_backtrace_sys = { path = "../rust-sgx/sgx_backtrace_sys" }
sgx_build_helper = { path = "../rust-sgx/sgx_build_helper" }
sgx_cov = { path = "../rust-sgx/sgx_cov" }
sgx_demangle = { path = "../rust-sgx/sgx_demangle" }
sgx_libc = { path = "../rust-sgx/sgx_libc" }
sgx_rand = { path = "../rust-sgx/sgx_rand" }
sgx_rand_derive = { path = "../rust-sgx/sgx_rand_derive" }
sgx_serialize = { path = "../rust-sgx/sgx_serialize" }
sgx_serialize_derive = { path = "../rust-sgx/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../rust-sgx/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../rust-sgx/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../rust-sgx/sgx_tcrypto_helper" }
sgx_tdh = { path = "../rust-sgx/sgx_tdh" }
sgx_tkey_exchange = { path = "../rust-sgx/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../rust-sgx/sgx_tprotected_fs" }
sgx_trts = { path = "../rust-sgx/sgx_trts" }
sgx_tse = { path = "../rust-sgx/sgx_tse" }
sgx_tseal = { path = "../rust-sgx/sgx_tseal" }
sgx_tstd = { path = "../rust-sgx/sgx_tstd" }
sgx_tunittest = { path = "../rust-sgx/sgx_tunittest" }
sgx_types = { path = "../rust-sgx/sgx_types" }
sgx_unwind = { path = "../rust-sgx/sgx_unwind" }
#sgx_ucrypto = { path = "../rust-sgx/sgx_ucrypto" }
#sgx_urts = { path = "../rust-sgx/sgx_urts" }
