[package]
name = "verdictd"
version = "0.0.1"
authors = ["Zhou Liang <liang.a.zhou@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "0.2", features = ["macros"] }
foreign-types = "0.5.0"
libc = "0.2"
lazy_static = "1.4.0"